# training-consolidation-workbench

./: .gitignore  README.md  WARP.md  docker-compose.yml  purge_data.py  pyproject.toml  run_frontend.ps1  start_infra.ps1  upload_test_suite.py  verify_graph.py  verify_harmonization.py  verify_module_1.ps1  verify_module_1.sh  verify_module_2.ps1  verify_module_3.ps1  verify_module_3.sh  verify_module_4.ps1  verify_sensor.ps1  verify_sensor.sh  verify_sensor_upload.py
baml_client/: __init__.py  async_client.py  inlinedbaml.py  parser.py  stream_types.py  sync_client.py  type_builder.py  type_map.py  types.py
baml_src/: clients.baml  extraction.baml
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  api.ts  index.css  store.ts
frontend/src/auth/: AuthProvider.tsx  (+1 more)
keycloak_data/: realm-export.json
scripts/: debug_layouts.py
src/auth/: security.py
src/dspy_modules/: __init__.py  outline_harmonizer.py  synthesizer.py
src/ingestion/: __init__.py  assets.py  extraction.py  models.py  rendering.py  sensors.py
src/pipelines/: definitions.py
src/publishing/: assets.py  pptx_generator.py  typst_generator.py
src/semantic/: assets.py  extraction.py  harmonization.py
src/services/: __init__.py  _use_master_outline_method.py  generator_service copy.py  generator_service.py  synthesis_service.py
src/storage/: __init__.py  dagster_resources.py  minio.py  weaviate.py
src/tools/: template_mapper.py
src/utils/: generate_test_docs.py
src/workbench/: _update_node_content_endpoint.py  main.py  models.py  operations.py
(+13 files in other folders)
